--- a/package.json
+++ b/package.json
@@ -9,6 +9,11 @@
     "eslint-config-prettier": "^8.5.0",
     "eslint-plugin-import": "^2.25.2",
     "eslint-plugin-prettier": "^4.0.0",
+    "jest": "^27.5.1",
     "prettier": "^2.6.0"
+  },
+  "scripts": {
+    "test": "jest",
+    "css": "npx tailwindcss -i ./src/input.css -o ./dist/output.css --watch"
   }
 }
