--- a/package.json
+++ b/package.json
@@ -12,11 +12,20 @@
     "eslint-config-prettier": "^8.5.0",
     "eslint-plugin-import": "^2.25.2",
     "eslint-plugin-prettier": "^4.0.0",
+    "html-webpack-plugin": "^5.5.0",
     "jest": "^27.5.1",
-    "prettier": "^2.6.0"
+    "prettier": "^2.6.0",
+    "webpack": "^5.70.0",
+    "webpack-cli": "^4.9.2",
+    "webpack-dev-server": "^4.7.4"
   },
   "scripts": {
     "test": "jest",
-    "css": "npx tailwindcss -i ./src/input.css -o ./dist/output.css --watch"
+    "css": "npx tailwindcss -i ./src/input.css -o ./dist/output.css --watch",
+    "build": "webpack",
+    "start": "webpack serve --open"
+  },
+  "dependencies": {
+    "firebase": "^9.6.10"
   }
 }
