--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "@babel/core": "^7.17.8",
     "@babel/preset-env": "^7.16.11",
     "babel-jest": "^27.5.1",
+    "css-loader": "^6.7.1",
     "eslint": "^8.2.0",
     "eslint-config-airbnb-base": "15.0.0",
     "eslint-config-prettier": "^8.5.0",
@@ -15,6 +16,7 @@
     "html-webpack-plugin": "^5.5.0",
     "jest": "^27.5.1",
     "prettier": "^2.6.0",
+    "style-loader": "^3.3.1",
     "webpack": "^5.70.0",
     "webpack-cli": "^4.9.2",
     "webpack-dev-server": "^4.7.4"
@@ -23,7 +25,7 @@
     "test": "jest",
     "css": "npx tailwindcss -i ./src/input.css -o ./dist/output.css --watch",
     "build": "webpack",
-    "start": "webpack serve --open"
+    "start": "webpack-dev-server --open"
   },
   "dependencies": {
     "firebase": "^9.6.10"
